--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <h1>Dia das Mulheres Yasmin</h1>
     </header>
     <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit deleniti alias dolor, suscipit aut est, optio
@@ -26,7 +26,23 @@
         <img src="./src/image/01.png" alt="">
     </div>
 
-    <video src="./src/videos/2022-12-02 10-45-18.mkv" width="300px" controls></video>
+    <video src="./src/videos/2022-12-02 10-45-18.mkv" width="300px" controls></video> -->
+
+    <div class="background">
+        <div class="images">
+            <div class="image image1"></div>
+            <div class="image image2"></div>
+            <div class="image image3"></div>
+            <div class="image image4"></div>
+            <!-- <img src="./src/image/05.png" alt="">
+            <img src="./src/image/04.png" alt="">
+            <img src="./src/image/03.png" alt="">
+            <img src="./src/image/01.png" alt=""> -->
+        </div>
+    </div>
+
+
+
 
 
 
